secure-shop/k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: backend, namespace: secureshop}
spec:
  replicas: 1
  selector: {matchLabels: {app: backend}}
  template: 
    metadata: {labels: {app: backend}}
    spec:
      runtimeClassName: gvisor
      serviceAccountName: backend-sa
      containers:
      - name: api
        image: hashicorp/http-echo:1.0
        args: ["-listen=:8080","-text=Secure-Shop API OK"]
        ports: [{containerPort: 8080}]
        livenessProbe: {httpGet: {path: /, port: 8080}, initialDelaySeconds: 15}
        readinessProbe: {httpGet: {path: /, port: 8080}, initialDelaySeconds: 5}
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
