secure-shop/k8s/05-frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata: {name: frontend, namespace: secureshop}
spec:
  replicas: 2
  selector: {matchLabels: {app: frontend}}
  template:
    metadata: {labels: {app: frontend}}
    spec:
      containers:
      - name: nginx
        image: nginx:1.28-alpine
        volumeMounts: [{name: html, mountPath: /usr/share/nginx/html}]
      volumes:
      - name: html
        configMap: {name: catalog}

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: secureshop
spec:
  type: NodePort
  selector: {app: frontend}
  ports: [{port: 80, nodePort: 30080}]
