secure-shop/k8s/01-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: secureshop
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-ingress
  namespace: secureshop
spec:
  podSelector:
    matchLabels: { app: frontend }
  ingress:
  - ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-egress
  namespace: secureshop
spec:
  podSelector:
    matchLabels: { app: backend }
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
      namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - namespaceSelector: {}
    ports:
      - protocol: TCP
        port: 443
  policyTypes: ["Egress"]
